# paling

./: .gitignore  Dockerfile.munge  README.md  TODO.md  docker-compose.yml  download_model.py  mcp.json  paling.py  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
VISION/: 01_bento_architecture.md  02_data_pipeline.md  03_identity_encoding.md  04_service_mesh.md
docs/pipeline/: chatlog-ingest.md  gizzard-defect-catalog.md  stage3-relationship-extractor.md
docs/retrospective/: 2024-vs-2026-capability-delta.md
infra/: com.jane.paling.plist
infra/traefik/: paling.yml
kube/: daemon-endpoints.yaml  daemon-service.yaml  kustomization.yaml  sidecar.yaml
paling/: __init__.py  bento.py  cartographer.py  chatlog.py  cli.py  daemon.py  dataset.py  discovery.py  fuse.py  inference.py  language.py  launchagent.py  modelclient.py  munge.py  painter.py  profile_runner.py  reward.py  traceur.py  train.py
paling/proto/: README.md  banchan_event.proto  banchan_event_pb2.py  orchestration_command.proto
scripts/: create_issues.sh  gen_proto.sh  mistral_delegate.py  scaffold_opt.sh
sidecar/: .gitignore  Dockerfile  Taskfile.yml  buf.gen.yaml  go.mod  go.sum  main.go
sidecar/consume/: consumer.go  (+1 more)
skill/: SKILL.md  paling
tests/: test_answers.py  test_bento_api.py  test_chatlog.py  test_cli.py  test_curate.py  test_dataset_build.py  test_discovery.py  test_language.py  test_launchagent.py  test_modelclient.py  test_orchestrate.py  test_paling.py  test_questions.py
wonderlib/: __init__.py  benchmark.py  git_stats.py  markdown_xml.py  profiling.py
(+6 files in other folders)
